fixing button on safari

--- a/style.css
+++ b/style.css
@@ -343,6 +343,14 @@ dialog>*+*,
         width: 2.5rem;
     }
 
+    dialog .submit {
+        border: 1px solid var(--gray);
+        border-radius: 1.6rem;
+        font-size: 1.4rem;
+        padding: 1.9rem 1.6rem;
+        text-align: start;
+    }
+
     form>*+*,
     dialog>*+*,
     .modal-content>*+* {
